# reaperwatch

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-agent.yml
agent/: CMakeLists.txt  main.cpp  reaperwatch.config.example.json
agent/collectors/: CMakeLists.txt  etw_consumer.cpp  event_json.cpp  event_json.h  file_monitor.cpp  network_monitor.cpp  process_event.h  process_monitor.cpp  process_monitor.h  registry_monitor.cpp  win_utils.h
agent/detections/: CMakeLists.txt  engine.cpp
agent/transport/: CMakeLists.txt  config.cpp  config.h  event_sink.cpp  event_sink.h  http_sender.cpp  http_sender.h
backend/: package-lock.json  package.json
backend/api/: queries.js  server.js
backend/detection/: matcher.js  mitre.js  rules.js
backend/ingestor/: ingest.js  tail.js
backend/storage/: db.js  ingestKey.js  schema.sql
dashboard/: index.html
dashboard/css/: app.css
dashboard/js/: app.js  data.js  eql.js
docs/: concept-1-process-monitor.md
driver/: reaperwatch.sys
engine/: CMakeLists.txt  matcher.cpp
